@@ -1,3 +1,14 @@
+2004-11-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* stdlib/strtod_l.c (INTERNAL (__STRTOF)): If densize > 2
+	and numsize < densize, always shift num up by empty + 1
+	limbs.
+
+	* posix/fnmatch_loop.c (internal_fnmatch): Clear is_seqval after
+	normal_bracket label.
+
+	* time/tst-mktime2.c (bigtime_test): Initialize tm.tm_isdst to -1.
+
 2004-11-29  Roland McGrath  <roland@redhat.com>
 
 	* posix/confstr.c: Avoid punctuation in #error text.
@@ -50,8 +61,6 @@
 	_IO_close): Likewise.
 
 2004-11-26  Jakub Jelinek  <jakub@redhat.com>
-
-	* sysdeps/generic/unsecvars.h (UNSECURE_ENVVARS): Add GETCONF_DIR.
 
 	* posix/Makefile (generated: Add getconf.speclist.
 	($(inst_libexecdir)/getconf): Use getconf.speclist instead of
